--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "Gulp Task Runner Basics 2018",
   "main": "index.html",
   "scripts": {
-    "start": "node server.js"
+    "start": "node server.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "repository": {
