--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "Gulp Task Runner Basics 2018",
   "main": "index.html",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
+    "test": "echo \"Error: no test specified\" && exit 1"
   },
   "repository": {
     "type": "git",
